--- a/style.css
+++ b/style.css
@@ -1,15 +1,61 @@
 body {
-	background-color: #777} 
+	background-color: #777
+	width: 960px;
+} 
 
-header {}
 
-nav {}
+header {
+	padding: 20px;
+	background-color: #ebebeb;
+	text-align: center;
+	margin-bottom: 10px;
+}
 
-section {}
+
+nav {
+	padding: 20px;
+	background-color: #ebebeb;
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+
+.clearfix::after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+
+section {
+	padding: 20px;
+	background-color: #ebebeb;
+	text-align: center;
+	margin-bottom: 10px;
+	margin-right: 10px;
+	width: 44.2%;
+	float: left;
+}
+
 
 article {}
 
-aside {}
 
-footer {}
+aside {
+	padding: 20px;
+	background-color: #ebebeb;
+	text-align: center;
+	margin-bottom: 10px;
+	width: 44.2%;
+	height: 152px;
+	float: left;
+}	
+
+
+footer {
+	padding: 20px;
+	background-color: #ebebeb;
+	text-align: center;
+	width: 100%;	
+}
 
