--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
-	background-color: #777
+	background-color: #777;
 	width: 960px;
+	font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif";
+	font-size: 18px;
+	color: gray;
+	padding: 5px 40px 40px 155px;
 } 
 
 
@@ -9,6 +13,7 @@ header {
 	background-color: #ebebeb;
 	text-align: center;
 	margin-bottom: 10px;
+	width: 93.5%;
 }
 
 
@@ -16,7 +21,8 @@ nav {
 	padding: 20px;
 	background-color: #ebebeb;
 	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
+	width: 93.5%;
 }
 
 
@@ -28,17 +34,32 @@ nav {
 
 
 section {
-	padding: 20px;
+	padding: 10px;
 	background-color: #ebebeb;
 	text-align: center;
+	margin-right: 20px;
 	margin-bottom: 10px;
-	margin-right: 10px;
-	width: 44.2%;
+	width: 46%;
+	height: 232px;
 	float: left;
 }
 
 
-article {}
+article {
+	background-color: #777;
+	margin: 10px 0px 10px 0px;
+	padding: 12px 15px 10px 15px;
+	color: white;
+}
+
+
+p {
+	background-color: #ebebeb;
+	margin: 10px 10px 10px 10px;
+	height: 40px;
+	padding-top: 10px;
+	color: gray;
+}
 
 
 aside {
@@ -46,8 +67,8 @@ aside {
 	background-color: #ebebeb;
 	text-align: center;
 	margin-bottom: 10px;
-	width: 44.2%;
-	height: 152px;
+	width: 43%;
+	height: 212px;
 	float: left;
 }	
 
@@ -56,6 +77,8 @@ footer {
 	padding: 20px;
 	background-color: #ebebeb;
 	text-align: center;
+	margin-top: 10px;
 	width: 100%;	
+	width: 93.5%;
 }
 
